<resources>
    <string name="app_name">Xpns</string>
    <string name="title_activity_detail_view">Detail View</string>
    <string name="hint_amount">0.00</string>
    <string name="currency">€</string>
    <string name="submit">Submit</string>
    <string name="label_category">Category</string>
    <string name="label_details">Details</string>
    <string name="hint_note">Add a note...</string>
    <string-array name="categories">
        <item>Food&amp;Drinks</item>
        <item>Health/Medical</item>
        <item>Shopping</item>
        <item>Transportation</item>
        <item>Gifts</item>
        <item>Utilities</item>
        <item>Travel</item>
        <item>Debt</item>
        <item>Other</item>
        <item>Housing</item>
        <item>Investments</item>
    </string-array>

    <string name="mtrl_theme_switcher_title">Theme Switcher</string>
    <string name="mtrl_theme_switcher_save">Save</string>
    <string name="mtrl_theme_switcher_cancel">Cancel</string>
    <string name="mtrl_theme_switcher_reset">Reset</string>

    <string name="mtrl_red">Red</string>
    <string name="mtrl_purple">Purple</string>
    <string name="mtrl_indigo">Indigo</string>
    <string name="mtrl_blue">Blue</string>
    <string name="mtrl_green">Green</string>
    <string name="mtrl_yellow">Yellow</string>
    <string name="mtrl_orange">Orange</string>
    <string name="mtrl_brown">Brown</string>
    <string name="mtrl_grey">Grey</string>
    <string name="mtrl_blue_grey">Blue grey</string>
    <string name="mtrl_xpns">Xpns</string>
</resources>
