<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.hush.ui.hush.HushFragmentViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/amount_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_24dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/currency"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    android:textSize="36sp"/>

                <Space
                    android:layout_width="@dimen/space_8dp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.amount}"
                    android:textAppearance="?attr/textAppearanceHeadline3"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_4dp"
                android:hint="@string/label_details"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_16dp"
                android:focusable="false"
                android:gravity="start"
                android:inputType="date"
                android:onClick="@{(view) -> viewModel.onDatePickerEdittextClicked(view)}"
                android:text="@={viewModel.date}"
                android:textAppearance="?attr/textAppearanceBody1"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_32dp"
                android:gravity="start"
                android:hint="@string/hint_note"
                android:inputType="text"
                android:text="@={viewModel.note}"
                android:textAppearance="?attr/textAppearanceBody1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_16dp"
                android:hint="@string/label_category"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.hush.utils.CustomChipGroup
                    android:id="@+id/cg_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_16dp"
                    app:category="@{viewModel.category}"/>
            </ScrollView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="@{viewModel.loader ? View.VISIBLE: View.GONE}"
            tools:visibility="visible"/>
    </FrameLayout>
</layout>